--- a/BM Miniprojects/E_Commerce_Admin_Panel/package.json
+++ b/BM Miniprojects/E_Commerce_Admin_Panel/package.json
@@ -23,6 +23,8 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.2.0",
+    "recharts": "^2.15.1",
+    "tailwind-scrollbar": "^4.0.1",
     "tailwindcss": "^4.0.9",
     "zustand": "^5.0.3"
   },
